--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "offline": "ts-node tests/offlineTest.ts",
-    "deploy": "ts-node tests/deployTest.ts"
+    "deploy": "ts-node tests/deployTest.ts",
+    "validate": "ts-node src/validate.ts"
   },
   "repository": {
     "type": "git",
