--- a/configurations/node10-linux-external/serverless.yml
+++ b/configurations/node10-linux-external/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: http-node10-linux-external
+service: node10-linux-external
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
