--- a/configurations/node10-windows-webpack/serverless.yml
+++ b/configurations/node10-windows-webpack/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: node10-linux
+service: node10-windows-webpack
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
@@ -21,7 +21,7 @@ provider:
   name: azure
   region: West Europe
   runtime: nodejs10
-  os: linux
+  os: windows
   # prefix: "sample"  # prefix of generated resource name
   # subscriptionId: A356AC8C-E310-44F4-BF85-C7F29044AF99
   # stage: dev
@@ -82,7 +82,7 @@ functions:
           methods:
             - GET
           authLevel: anonymous # can also be `function` or `admin`
-          
+
   # The following are a few examples of other events you can configure:
   # storageBlob:
   #   handler: src/handlers/storageBlob.printMessage
