--- a/configurations/node10-windows/serverless.yml
+++ b/configurations/node10-windows/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: http-node10-windows
+service: node10-windows
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
