--- a/configurations/node12-linux-external/serverless.yml
+++ b/configurations/node12-linux-external/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: http-node12-linux
+service: node12-linux
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
