--- a/configurations/node12-windows-webpack/package.json
+++ b/configurations/node12-windows-webpack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node10-windows",
+  "name": "node12-windows-webpack",
   "version": "1.0.0",
   "description": "Azure Functions sample for the Serverless framework",
   "scripts": {
@@ -12,6 +12,9 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "serverless-azure-functions": "^1.0.0"
+    "serverless-azure-functions": "^1.0.0",
+    "serverless-webpack": "^5.3.1",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   }
 }
