--- a/configurations/python37/serverless.yml
+++ b/configurations/python37/serverless.yml
@@ -29,4 +29,6 @@ functions:
     events:
       - http: true
         x-azure-settings:
+          methods:
+            - GET
           authLevel: anonymous
